# FaceAttendance

./: .gitignore  CMakeLists.txt  README.md
include/: Database.hpp  FaceEngine.hpp  GUI.hpp
src/: Database.cpp  FaceEngine.cpp  GUI.cpp  main.cpp
